# gh-cr

./: .gitignore  Cargo.toml  README.md  build.sh  test.sh  test2.sh
.github/workflows/: release.yml
src/: app.rs  gh.rs  main.rs
src/components/: controls.rs  ctrl_c.rs  mod.rs  scroll.rs
src/threads/: mod.rs
