[package]
name = "gh-cr"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
crossterm = "0.29.0"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
dirs-next = "2.0.0"
tempfile = "3.12.0"
clap = { version = "4.5.18", features = ["derive"] }
textwrap = "0.16.1"
chrono = { version = "0.4.38", features = ["clock"] }
chrono-humanize = "0.2.3"
